--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ html,
 body {
   height: 100%;
   background-color: #333;
+  margin: 0;
 }
 
 body {
@@ -103,4 +104,8 @@ body {
  */
 .mastfoot {
   color: rgba(255, 255, 255, .5);
+}
+
+.div100{
+  height: 100%;
 }
